# xmonad.hs

./: .gitignore  10profile  README.md  arandr-hilfy.hs  arandr-hilfy.sh  arandr-skkukuk.sh  build  cabal.project  cabal.project.local  compton.conf  new-startup-config  picom.conf  start-xmonad  start-xmonad.desktop  terminal.errors  update.sh  xmessage  xmessage.out  xmonad-bsa.cabal  xmonad-test.cabal  xmonad.hs
lib/XMonad/Hooks/: HackDocks.hs  ManageDebug.hs
lib/XMonad/Util/: DebugWindow.hs  NoTaskBar.hs
lib/XMonad/Util/Loggers/: NamedScratchpad.hs
