------------------------------------------------------------------------------
name:          xmonad-bsa
version:       0.4
synopsis:      Brandon's xmonad config
homepage:      http://github.com/geekosaur/xmonad.hs/tree/skkukuk
license:       BSD2
license-file:  LICENSE
author:        brandon s allbery kf8nh <allbery.b@gmail.com>
maintainer:    brandon s allbery kf8nh <allbery.b@gmail.com>
copyright:     Copyright (c) 2022 brandon s allbery kf8nh
category:      Graphics
build-type:    Simple
cabal-version: 2.0

------------------------------------------------------------------------------
executable xmonad-bsa
  main-is:          xmonad.hs
  default-language: Haskell2010
  ghc-options:      -Wall -fno-warn-missing-signatures
  build-depends:    base >= 4.14 && < 5,
                    unix >= 2.7 && < 3,
                    xmonad >= 0.18.0.9 && < 0.19,
                    xmonad-contrib >= 0.18.0.9 && < 0.19,
                    dbus >= 1.2.22 && < 1.3,
                    utf8-string >= 1.0.2 && < 1.1
